--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@auth0/auth0-angular": "^1.10.1",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "rxjs": "~7.5.0",
