Implemented user data

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-7gr-w4iu.us.auth0.com/",
+    "Audience": "portfolio/IssueTracker"
+  }
 }
