--- a/server/server.csproj
+++ b/server/server.csproj
@@ -23,5 +23,6 @@
     <PackageReference Include="Auth0.ManagementApi" Version="7.17.2" />
     <PackageReference Include="RestSharp" Version="108.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
   </ItemGroup>
 </Project>
